
+ Made rh() accept up to 20 pairs

+ Added year(), month(), day(), dayOfWeek(), dayOfYear(), week(), weekOfMonth(), hour(), minute(), second() & millisecond() to RubyDate


Version 1.3.0

* Improved RubyDir.glob() compatibility on Windows 

+ Throws RuntimeExceptions while Exceptions are caught

+ The binarySearch() of RubyArray now accepts block

+ Added compareByIdentity() feature for RubyHash

* RubyRange not requires Comparable objects to initialize anymore

* Moved newRubyArray(), newRubyHash(), newRubyEnumerable(), newRubyRnumerator(), newRubyRange() to RubyCollections

- Removed U(), X(), Ⴖ(), ㄍ(), ㄧ(), 十() from RubyArray

* Made RubyEnumerable an abstract class

* Changed constructors of RubyArray & RubyHash to public

* Changed foreach() of RubyIO to accept only a block


Version 1.3.1

* Fixed the bugs when max(), maxBy(), min(), minBy(), minmax(), minmaxBy() of RubyEnumerable are called on an empty Iterable

* Added date() to RubyCollections


Version 1.4.0

- Removed google guava dependency

+ Implemented RubyArray#pack()

+ Added RubyFile::join

* Added return value to RubyKernel::p


Version 1.4.1

* Fixed CycleIterator#hasNext bug

* Fixed EachLineIterator#next bug

* Changed UnsupportedOperationException to IllegalStateException in RubyIO

* Changed NoSuchElementException to IllegalArgumentException in RubyIO

* Overrode toString() methods of all Iterables

* Made RubyArray#push accept varargs

* Fixed the bug of RubyArray#delete which happens while deleting null objects

* Fixed the bugs of RubyArray#assoc & RubyArray#rassoc while encountering null objects

* Fixed the bugs of RubyHash#rassoc & RubyHash#key while encountering null objects

* Fixed the bug of RubyEnumerable#sortBy ordering

* Increased acceptable comparators of RubyEnumerable#sort & RubyEnumerable#sortBy

* Increased acceptable comparators of RubyArray#sortByǃ

* Changed RubyHash entries to ComparableEntry

* Fixed the bug of RubyFile#join